--- a/FirtApp/FirtApp/Web.config
+++ b/FirtApp/FirtApp/Web.config
@@ -8,6 +8,9 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+   <connectionStrings>
+    <add name="testDB" connectionString="Data Source=(localdb)\Projects;Initial Catalog=testDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
