User successfully added

--- a/FirtApp/FirtApp/FirtApp.csproj
+++ b/FirtApp/FirtApp/FirtApp.csproj
@@ -144,16 +144,20 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BussinessObject\BussinessObject.csproj">
       <Project>{de28ddf9-6e0f-48ee-8c1b-cb73afedd990}</Project>
       <Name>BussinessObject</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Repository\Repository.csproj">
+      <Project>{84248bf3-b804-4a21-82b7-f54b25b6acd4}</Project>
+      <Name>Repository</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
