--- a/FirtApp/FirtApp/FirtApp.csproj
+++ b/FirtApp/FirtApp/FirtApp.csproj
@@ -155,9 +155,9 @@
       <Project>{de28ddf9-6e0f-48ee-8c1b-cb73afedd990}</Project>
       <Name>BussinessObject</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Repository\Repository.csproj">
-      <Project>{84248bf3-b804-4a21-82b7-f54b25b6acd4}</Project>
-      <Name>Repository</Name>
+    <ProjectReference Include="..\Repositries\Repositries.csproj">
+      <Project>{eb2ee79a-3730-4720-a776-90c7f9ad1739}</Project>
+      <Name>Repositries</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
