--- a/FirtApp/Repositries/Repositries.csproj
+++ b/FirtApp/Repositries/Repositries.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repostry\ConnectionManager.cs" />
+    <Compile Include="Repostry\TestingClass.cs" />
     <Compile Include="Repostry\UserRepos.cs" />
   </ItemGroup>
   <ItemGroup>
